-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.6
-
macOS 10.14
-
-
3f23d27dd5b0589b3ea47faffd137e6d6ddeb805 (qt/qtbase/5.12)
When a messagebox appears after closing a mainwindow after dismissing a messagebox then it can cause a crash.
With the attached example, do the following:
- Start the application and dismiss the initial messagebox.
- Make sure the window is big enough to contain a whole messagebox
- Type something and then click on the red X to close the window
- Choose Don't Save
- Go to File | New
then it will crash right away.
For Gerrit Dashboard: QTBUG-80355 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
285622,3 | Use QPointer for QWindow pointers in QGuiApplication | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |