Use QPointer for QWindow pointers in QGuiApplication

Guard against stale pointers; Use QPointer instead of
raw pointers for QGuiApplicationPrivate state variables.

Change-Id: Ie4f980f13dafe9729c1898b8fac7d26a87d2ca59
Fixes: QTBUG-80355
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>